[all] use data item loader for action scripts